overlays/qa/patchDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdoqa
  template:
    metadata:
      labels:
        app: sdoqa
    spec:
      containers:
      - name: sdowebsite
        image: delsynn/sdo:qa
        resources:
          requests:
            memory: "32Mi"
            cpu: "5m"
