overlays/qa/patchService.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdo
spec:
  selector:
    app: sdoqa
