overlays/qa/rolloutservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdoqa-rolloutservice
  namespace: sdoqa
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: sdoqa
