overlays/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdoqa-service
  namespace: sdoqa
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sdoqa
