overlays/qa/patchIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdo
spec:
  rules:
  - host: sdoqa.38.cc.ucll.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdo
            port:
              number: 80
